8292660: C2: blocks made unreachable by NeverBranch-to-Goto conversion are removed incorrectly

Backport-of: 730ced9a109953ca1c3b7bfd6a3eeac5b85892c5